--- a/Practice/style.css
+++ b/Practice/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #a1a1a1;
+    background-color: #888888;
     color: #1d546d;
     font-family: "Fjalla One", Arial;
   }
@@ -23,5 +23,38 @@ body {
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 20px;
     text-align: center;
+  }
+  
+
+  header {
+    display: flex; /* Aligns image and nav links inline */
+    justify-content:space-between; /* Space between logo and nav links */
+    align-items: center; /* Vertically aligns items */
+    padding: 10px 20px;
+  }
+  
+  .logo {
+    height: 50px; /* Adjust size of the logo */
+  }
+  
+  nav ul {
+    list-style-type: none; /* Remove bullet points */
+    display: flex; /* Make the list horizontal */
+    gap: 20px; /* Spacing between items */
+    padding: 0;
+    margin: 0;
+    
+
+  }
+  
+  nav ul li a {
+    text-decoration: none;
+    color: black;
+    font-size: 16px;
+    
+  }
+  
+  nav ul li a:hover {
+    color: rgb(111, 212, 212);
   }
   
