Change of stylesheet

--- a/Practice/style.css
+++ b/Practice/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #888888;
+    background-color: #ffffff;
     color: #1d546d;
     font-family: "Fjalla One", Arial;
   }
